@@ -1,3 +1,10 @@
+2007-11-18  Jens Granseuer  <jensgr@gmx.net>
+
+	Patch by: Bastien Nocera <hadess@hadess.net>
+
+	* gnome-settings-multimedia-keys.c: allow key bindings using Super and
+	Meta combinations (bug #165343)
+
 2007-11-11  Jens Granseuer  <jensgr@gmx.net>
 
 	* gsd-media-keys-window.c: (gsd_media_keys_window_init): slightly
